Changed wording on submit button

--- a/templates/remove.html
+++ b/templates/remove.html
@@ -19,7 +19,7 @@
                 </select>
             </div>
             <br>
-            <button class="btn btn-primary" type="submit">Permanently Remove Project</button>
+            <button class="btn btn-primary" type="submit">Permanently Remove Selected Project</button>
             <br>
         </form>
     {% endif %}
