Changed link for editing project in navbar and footer

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,7 +35,7 @@
                     <ul class="navbar-nav mr-auto mt-2">
                         <li class="nav-item"><a class="nav-link" href="/all_projects">Show All Projects</a></li>
                         <li class="nav-item"><a class="nav-link" href="/add">Add New Project</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/edit">Edit a Project</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/pick_edit">Edit a Project</a></li>
                         <li class="nav-item"><a class="nav-link" href="/remove">Delete a Project</a></li>
                     </ul>
                     <ul class="navbar-nav ml-auto mt-2">
@@ -67,7 +67,7 @@
                 <div id="one">
                     <strong>Projects:</strong><br>
                     <a href="{{url_for('add')}}">Add a New Project</a><br>
-                    <a href="{{url_for('edit')}}">Edit an Existing Project</a><br>
+                    <a href="{{url_for('pick_edit')}}">Edit an Existing Project</a><br>
                     <a href="{{url_for('remove')}}">Delete a Project</a><br>
                     <a href="{{url_for('display')}}">View a Project</a><br>
                     <a href="{{url_for('all_projects')}}">View all Projects</a><br>
