Changed values in dropdown for results scale

--- a/templates/add.html
+++ b/templates/add.html
@@ -75,12 +75,12 @@
             <div class="form-group">
                 <label>Grade your Results on a Scale of 1-5 (1 being best, 5 being worse): * &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                     <select autofocus class="form-control" name="res_scale" required>
-                        <option value="None" selected disabled>Select One</option>
-                        <option value="1">1 - Nailed It!</option>
-                        <option value="2">2 - Almost There</option>
-                        <option value="3">3 - Just Okay but Needs some Improvement</option>
-                        <option value="4">4 - Needs a lot of Improvement</option>
-                        <option value="5">5 - Completely Bombed it!</option>
+                        <option value="None" selected>Select One</option>
+                        <option value="1 - Nailed It!">1 - Nailed It!</option>
+                        <option value="2 - Almost There">2 - Almost There</option>
+                        <option value="3 - Just Okay but Needs some Improvement">3 - Just Okay but Needs some Improvement</option>
+                        <option value="4 - Needs a lot of Improvement">4 - Needs a lot of Improvement</option>
+                        <option value="5 - Completely Bombed it!">5 - Completely Bombed it!</option>
                     </select>
                 </label>
             </div>
