added button code for buymeacoffee.com

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -63,6 +63,7 @@
         </main>
 
         <footer class="medium text-white text-center text-muted footer-dark bg-dark border">
+            <br>
             <div id="wrapper">
                 <div id="one">
                     <strong>Projects:</strong><br>
@@ -87,8 +88,15 @@
                     <a href="https://www.facebook.com/JoJoMiddour">Facebook</a><br>
                     <a href="https://twitter.com/j_middour">Twitter</a><br>
                 </div>
-            </div>
-
+            </div><br>
+            <div id="coffee">
+                <script type="text/javascript"
+                        src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js"
+                        data-name="bmc-button" data-slug="jmiddour" data-color="#5F7FFF"
+                        data-emoji="🎨"  data-font="Poppins" data-text="Help Support this Site"
+                        data-outline-color="#ffffff" data-font-color="#ffffff"
+                        data-coffee-color="#FFDD00" ></script>
+            </div><br>
             <strong>Copyright &#169; <script type="text/JavaScript">document.write(new Date().getFullYear());</script> <a href="https://joannemiddour.com">Joanne Middour</a></strong>
         </footer>
 
