--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,104 +2,125 @@
 
 <html lang="en">
 
-    <head>
+<head>
 
-        <meta charset="utf-8">
-        <meta name="viewport" content="initial-scale=1, width=device-width">
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, width=device-width">
 
-        <!-- http://getbootstrap.com/docs/4.5/ -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!-- http://getbootstrap.com/docs/4.5/ -->
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+          crossorigin="anonymous">
 
-        <!-- https://favicon.io/emoji-favicons/money-mouth-face/ -->
-        <link href="/static/favicon.ico" rel="icon">
+    <!-- https://favicon.io/emoji-favicons/money-mouth-face/ -->
+    <link href="/static/favicon.ico" rel="icon">
 
-        <link href="/static/styles.css" rel="stylesheet">
+    <link href="/static/styles.css" rel="stylesheet">
 
-        <!-- http://getbootstrap.com/docs/4.5/ -->
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <!-- http://getbootstrap.com/docs/4.5/ -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+            crossorigin="anonymous"></script>
 
-        <title>The Resin Crafter's Helper {% block title %}{% endblock %}</title>
+    <title>The Resin Crafter's Helper {% block title %}{% endblock %}</title>
 
-    </head>
+</head>
 
-    <body>
+<body>
 
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark border">
-            <a class="navbar-brand" href="/"><span class="blue">The</span> <span class="red">Resin</span> <span class="yellow">Crafter's</span> <span class="green">Helper</span></a>
-            <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbar">
-                {% if session.user_id %}
-                    <ul class="navbar-nav mr-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/all_projects">Show All Projects</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/add">Add New Project</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/pick_edit">Edit a Project</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/remove">Delete a Project</a></li>
-                    </ul>
-                    <ul class="navbar-nav ml-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
-                    </ul>
-                {% else %}
-                    <ul class="navbar-nav ml-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
-                    </ul>
-                {% endif %}
-            </div>
-        </nav>
-
-        {% if get_flashed_messages() %}
-            <header>
-                <div class="alert alert-primary border text-center" role="alert">
-                    {{ get_flashed_messages() | join(" ") }}
-                </div>
-            </header>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark border">
+    <a class="navbar-brand" href="/">
+        <span class="blue">The</span>
+        <span class="red">Resin</span>
+        <span class="yellow">Crafter's</span>
+        <span class="green">Helper</span></a>
+    <button aria-controls="navbar" aria-expanded="false"
+            aria-label="Toggle navigation" class="navbar-toggler"
+            data-target="#navbar" data-toggle="collapse" type="button">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbar">
+        {% if session.user_id %}
+            <ul class="navbar-nav mr-auto mt-2">
+                <li class="nav-item">
+                    <a class="nav-link"
+                       href="/all_projects">Show All Projects</a></li>
+                <li class="nav-item">
+                    <a class="nav-link"
+                       href="/add">Add New Project</a></li>
+                <li class="nav-item">
+                    <a class="nav-link"
+                       href="/pick_edit">Edit a Project</a></li>
+                <li class="nav-item">
+                    <a class="nav-link"
+                       href="/remove">Delete a Project</a></li>
+            </ul>
+            <ul class="navbar-nav ml-auto mt-2">
+                <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
+            </ul>
+        {% else %}
+            <ul class="navbar-nav ml-auto mt-2">
+                <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
+                <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
+            </ul>
         {% endif %}
+    </div>
+</nav>
 
-        <main>
-            {% block main %}{% endblock %}
-        </main>
+{% if get_flashed_messages() %}
+    <header>
+        <div class="alert alert-primary border text-center" role="alert">
+            {{ get_flashed_messages() | join(" ") }}
+        </div>
+    </header>
+{% endif %}
 
-        <footer class="medium text-white text-center text-muted footer-dark bg-dark border">
-            <br>
-            <div id="wrapper">
-                <div id="one">
-                    <strong>Projects:</strong><br>
-                    <a href="{{url_for('add')}}">Add a New Project</a><br>
-                    <a href="{{url_for('pick_edit')}}">Edit an Existing Project</a><br>
-                    <a href="{{url_for('remove')}}">Delete a Project</a><br>
-                    <a href="{{url_for('display')}}">View a Project</a><br>
-                    <a href="{{url_for('all_projects')}}">View all Projects</a><br>
-                </div>
-                <div id="two">
-                    <strong>Account:</strong><br>
-                    <a href="{{url_for('register')}}">Register for an Account</a><br>
-                    <a href="{{url_for('login')}}">Login to your Account</a><br>
-                    <a href="{{url_for('logout')}}">Logout of your Account</a><br>
-                    <a href="{{url_for('edit_act')}}">Edit your Account</a><br>
-                </div>
-                <div id="three">
-                    <strong>Reach Out:</strong><br>
-                    <a href="https://joannemiddour.com/">My Portfolio Website</a><br>
-                    <a href="https://www.linkedin.com/in/joanne-middour/">Find me on LinkedIn</a><br>
-                    <a href="https://github.com/jmmiddour">My GitHub Profile</a><br>
-                    <a href="https://www.facebook.com/JoJoMiddour">Facebook</a><br>
-                    <a href="https://twitter.com/j_middour">Twitter</a><br>
-                </div>
-            </div><br>
-            <div id="coffee">
-                <script type="text/javascript"
-                        src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js"
-                        data-name="bmc-button" data-slug="jmiddour" data-color="#5F7FFF"
-                        data-emoji="🎨"  data-font="Poppins" data-text="Help Support this Site"
-                        data-outline-color="#ffffff" data-font-color="#ffffff"
-                        data-coffee-color="#FFDD00" ></script>
-            </div><br>
-            <strong>Copyright &#169; <script type="text/JavaScript">document.write(new Date().getFullYear());</script> <a href="https://joannemiddour.com">Joanne Middour</a></strong>
-        </footer>
+<main>
+    {% block main %}{% endblock %}
+</main>
 
-    </body>
+<footer class="medium text-white text-center text-muted footer-dark bg-dark border">
+    <br>
+    <div id="wrapper">
+        <div id="one">
+            <strong>Projects:</strong><br>
+            <a href="{{url_for('add')}}">Add a New Project</a><br>
+            <a href="{{url_for('pick_edit')}}">Edit an Existing Project</a><br>
+            <a href="{{url_for('remove')}}">Delete a Project</a><br>
+            <a href="{{url_for('display')}}">View a Project</a><br>
+            <a href="{{url_for('all_projects')}}">View all Projects</a><br>
+        </div>
+        <div id="two">
+            <strong>Account:</strong><br>
+            <a href="{{url_for('register')}}">Register for an Account</a><br>
+            <a href="{{url_for('login')}}">Login to your Account</a><br>
+            <a href="{{url_for('logout')}}">Logout of your Account</a><br>
+            <a href="{{url_for('edit_act')}}">Edit your Account</a><br>
+        </div>
+        <div id="three">
+            <strong>Reach Out:</strong><br>
+            <a href="https://joannemiddour.com/">My Portfolio Website</a><br>
+            <a href="https://www.linkedin.com/in/joanne-middour/">Find me on LinkedIn</a><br>
+            <a href="https://github.com/jmmiddour">My GitHub Profile</a><br>
+            <a href="https://www.facebook.com/JoJoMiddour">Facebook</a><br>
+            <a href="https://twitter.com/j_middour">Twitter</a><br>
+        </div>
+    </div><br>
+    <div id="coffee">
+        <script type="text/javascript"
+                src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js"
+                data-name="bmc-button" data-slug="jmiddour" data-color="#5F7FFF"
+                data-emoji="🎨"  data-font="Poppins" data-text="Help Support this Site"
+                data-outline-color="#ffffff" data-font-color="#ffffff"
+                data-coffee-color="#FFDD00" ></script>
+    </div><br>
+    <strong>Copyright &#169; <script type="text/JavaScript">document.write(new Date().getFullYear());</script> <a href="https://joannemiddour.com">Joanne Middour</a></strong>
+</footer>
+
+</body>
 
 </html>
