--- a/templates/login.html
+++ b/templates/login.html
@@ -5,18 +5,28 @@
 {% endblock %}
 
 {% block main %}
+
 <h1>Welcome to The Resin Crafter's Helper</h1><hr><br>
+
 <h3>Please login to your account below!</h3><br><br>
-<form action="/login" method="post">
-    <div class="form-group">
-        Username: &nbsp;&nbsp;<input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text">
-    </div>
-    <div class="form-group">
-        Password: &nbsp; &nbsp;<input class="form-control" name="password" placeholder="Password" type="password">
-    </div>
-    <br>
-    <button class="btn btn-primary" type="submit">Log In</button>
-    <br>
-</form>
+
+    <form action="/login" method="post">
+
+        <div class="form-group">
+            Username: &nbsp;&nbsp;<input autocomplete="off" autofocus class="form-control" name="username"
+                                         placeholder="Username" type="text">
+        </div>
+
+        <div class="form-group">
+            Password: &nbsp; &nbsp;<input class="form-control" name="password" placeholder="Password" type="password">
+        </div>
+
+        <br>
+        <button class="btn btn-primary" type="submit">Log In</button>
+        <br>
+
+    </form>
+
 <br><a href="{{url_for('register')}}">Don't have an account? Register for an account here.</a><br>
+
 {% endblock %}
