added link to view single project

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -59,6 +59,9 @@
                        href="/add">Add New Project</a></li>
                 <li class="nav-item">
                     <a class="nav-link"
+                       href="/select">View a Project</a></li>
+                <li class="nav-item">
+                    <a class="nav-link"
                        href="/pick_edit">Edit a Project</a></li>
                 <li class="nav-item">
                     <a class="nav-link"
@@ -103,7 +106,7 @@
             <a href="{{url_for('add')}}">Add a New Project</a><br>
             <a href="{{url_for('pick_edit')}}">Edit an Existing Project</a><br>
             <a href="{{url_for('remove')}}">Delete a Project</a><br>
-            <a href="{{url_for('display')}}">View a Project</a><br>
+            <a href="{{url_for('select')}}">View a Project</a><br>
             <a href="{{url_for('all_projects')}}">View all Projects</a><br>
         </div>
 
