added a cancel and reset button

--- a/templates/edit_act.html
+++ b/templates/edit_act.html
@@ -59,16 +59,26 @@
                        type="text">
             </div><br>
 
-            <div id="wrapper" style="height: 50px ">
+            <div id="wrapper"
+                 style="height: 40px;
+                 align-content: center;
+                 justify-content: space-evenly;
+                 padding-left: 60px;
+                 padding-right: 60px;">
 
                 <button class="btn btn-primary"
                         type="button"
                         name="cancel"
-                        onclick="window.history.back()">
+                        onclick="window.history.back()"
+                        style="background-color: darkred;
+                        border: red; color: ghostwhite">
                     Cancel</button>
 
                 <button class="btn btn-primary"
-                        type="reset">Reset</button>
+                        type="reset"
+                        style="background-color: orange;
+                        color: darkblue; border: orange">
+                    Reset</button>
 
                 <button class="btn btn-primary"
                         type="submit">Submit your Changes</button>
